--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -4,7 +4,7 @@
         <span class='pull-right commonlink'><%= link_to("一键清空购物车", clean_carts_path,method: :delete,data: {confirm: "你确定要清空整个购物车吗？"})%>
         </span>
         <br>
-        <hr />
+        <hr style="height:2.5px">
         <div class="row ">
             <% if current_cart.cart_items.length > 0 %>
                 <div class='col-xs-12 col-md-8 cart-item-box'>
@@ -60,7 +60,7 @@
                     <span class='pull-left'>运费</span>
                     <span class='pull-right'>免运费</span>
                 </div>
-                <hr/>
+                <hr style="height:1px">
                 <!-- 商品總價 -->
                 <div class='clearfix'>
                     <span class='pull-left'>合计</span>
