--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -1,57 +1,63 @@
-<div class="row">
-    <div class="col-md-12">
-        <h2>购物明细</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th width="80%">商品明细</th>
-                    <th>单价</th>
-                    <th>数量</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% current_cart.cart_items.each do |cart_item| %>
-                    <tr>
-                        <td>
-                            <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
-                        </td>
-                        <td>
-                            <%= cart_item.product.price %>
-                        </td>
-                        <td>
-                            <%= cart_item.quantity %>
-                        </td>
-                    </tr>
-                <% end %>
-            </tbody>
-        </table>
-        <div class="total clearfix">
-            <span class="pull-right">
-                总计 <%= render_cart_total_price(current_cart) %> CNY
-      </span>
-        </div>
-        <hr>
-        <h2>订单资讯</h2>
-        <div class="order-form">
-            <%= simple_form_for @order do |f| %>
-                <legend>订购人</legend>
-                <div class="form-group col-lg-6">
-                    <%= f.input :billing_name %>
+<div class='container'>
+    <div class='row content-box'>
+        <div class='col-md-12'>
+            <!--=== 頁面標題 ===-->
+            <h3 class="center"><i class='fa fa-shopping-cart'></i> 购物清单</h3>
+            <hr />
+            <!--=== 購物車資訊 ===-->
+            <div class='row'>
+                <!-- 購物車列表內容 -->
+                <div class='col-xs-12 col-md-12 cart-item-box'>
+                    <% current_cart.cart_items.each do |cart_item| %>
+                        <div class="row commonlink" style="padding-left: 20px;padding-bottom:15px;">
+                            <div class="col-md-2">
+                                <% if cart_item.product.photos.present? %>
+                                    <!-- 顯示第一張圖片 -->
+                                    <%= image_tag(cart_item.product.photos[0].image.thumb.url ) %>
+                                <% else %>
+                                    <%= image_tag('http://placehold.it/200x200&text=No Pic') %>
+                                <% end %>
+                            </div>
+                            <div class='name col-md-6'><%= link_to(cart_item.product.title, product_path(cart_item.product)) %></div>
+                            <div class='price col-md-1'><%= cart_item.product.price %></div>
+                            <div class='quantity col-md-2'>x <%= cart_item.quantity %></div>
+                            <div class='count col-md-1'> <%= render_product_price_count(cart_item.product,cart_item.quantity) %></div>
+                        </div>
+                    <% end %>
                 </div>
-                <div class="form-group col-lg-6">
-                    <%= f.input :billing_phone %>
+            </div>
+            <br/>
+            <!-- 購物車內商品總價 -->
+            <div class='clearfix'>
+                <div class='pull-right'>合计： <%= render_cart_total_price(current_cart) %></div>
+            </div>
+            <hr/>
+            <!--=== 訂單資訊 ===-->
+            <div class='col-md-6 col-md-offset-3'>
+                <h3 class="center"><i class='fa fa-credit-card'></i> 订单信息</h3>
+                <!--=== 下訂表單 ===-->
+                <div class='order-form'>
+                    <%= simple_form_for @order do |f| %>
+                        <div class='form-group'>
+                            <!-- 訂購人 -->
+                            <legend>付款信息</legend>
+                            <%= f.input :billing_name, placeholder: "姓名", input_html: { class: 'width-50'}, :label => "付款人-姓名" %>
+                            <%= f.input :billing_phone, placeholder: "电话", input_html: {class: 'width-50'}, :label => "付款人-电话" %>
+                            <hr>
+                            <!-- 收貨人 -->
+                            <legend>寄送信息</legend>
+                            <%= f.input :shipping_name, placeholder: "姓名", input_html: { class: 'width-50'}, :label => "收件人-姓名" %>
+                            <%= f.input :shipping_phone, placeholder: "电话", input_html: {class: 'width-50'}, :label => "收件人-电话" %>
+                            <%= f.input :shipping_address, placeholder: "地址", input_html: {class: 'width-50'}, :label => "收件人-地址" %>
+                            <hr>
+                        </div>
+                        <!-- 下訂，產生訂單 -->
+                        <div class='form-actions center'>
+                            <%= f.submit "确认订单", class: 'btn btn-md btn-primary' %>
+                        </div>
+                    <% end %>
                 </div>
-                <legend>收货人</legend>
-                <div class="form-group col-lg-6">
-                    <%= f.input :shipping_name %>
-                </div>
-                <div class="form-group col-lg-6">
-                    <%= f.input :shipping_address %>
-                </div>
-                <div class="checkout">
-                    <%= f.submit "生成订单", class:"btn btn-lg btn-danger pull-right",data:{ disable_with: "Submitting..."}%>
-                </div>
-            <% end %>
+            </div>
         </div>
     </div>
 </div>
