--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,69 +1,78 @@
-<div class="row">
-    <div class="col-md-12">
-        <h2>订单明细</h2>
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th width="80%">商品明细</th>
-                    <th>单价</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% @product_lists.each do |product_list| %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h3 class="center space-50"><i class='fa fa-list-alt'></i> 订单明细</h3>
+            <table class="table table-hover space-30">
+                <thead>
+                    <tr>
+                        <th>商品名称</th>
+                        <th>单价</th>
+                        <th>数量</th>
+                        <th>小计</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% @product_lists.each do |product_list| %>
+                        <tr>
+                            <td>
+                                <%= product_list.product_name %>
+                            </td>
+                            <td>
+                                <%= product_list.product_price%>
+                            </td>
+                            <td>
+                                <%= product_list.quantity %>
+                            </td>
+                            <td>
+                                <%= render_order_product_price_count(product_list.product_price,product_list.quantity) %>
+                            </td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+            <div class="total clearfix">
+                <span class="pull-right">
+                    合计： ¥ <%= @order.total %>
+                </span>
+            </div>
+            <h3 class="center space-50"><i class='fa fa-credit-card'></i> 订单信息</h3>
+            <table class='table space-30'>
+                <tbody>
+                    <thead>
+                        <tr>
+                            <th>付款信息</th>
+                        </tr>
+                    </thead>
                     <tr>
                         <td>
-                            <%= product_list.product_name %>
-                        </td>
-                        <td>
-                            <%= product_list.product_price%>
+                            <strong>付款人-姓名：</strong><%= @order.billing_name%><br/>
+                            <strong> 付款人-电话：</strong><%= @order.billing_phone%><br/>
                         </td>
                     </tr>
-                <% end %>
-            </tbody>
-        </table>
-        <div class="total clearfix">
-            <span class="pull-right">
-                总计 <%= @order.total %> CNY
-          </span>
-        </div>
-        <hr>
-        <h2>寄送资讯</h2>
-        <table class="table table-striped table-bordered">
-            <tbody>
-                <tr>
-                    <td>
-                        订购人
-              </td>
-                </tr>
-                <tr>
-                    <td>
-                        <%= @order.billing_name%> - <%= @order.billing_phone%>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        收件人
-              </td>
-                </tr>
-                <tr>
-                    <td>
-                        <%= @order.shipping_name%> - <%= @order.shipping_address%>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="pull-left">
-            <% if @order.order_placed? || @order.paid? %>
-                <%= link_to("申请取消订单", apply_to_cancel_order_path(@order),method: :post, class: "btn btn-info")%>
+                    <thead>
+                        <tr>
+                            <th>
+                                寄送信息
+                            </th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>
+                            <strong>收件人-姓名：</strong><%= @order.shipping_name%><br/>
+                            <strong>收件人-电话：</strong><%= @order.shipping_address%>
+                            <strong>收件人-地址：</strong><%= @order.shipping_address%>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <% if !@order.is_paid?%>
+                <div class="group center space-50">
+                    <%= link_to("以支付宝付款", pay_with_alipay_order_path(@order.token), :method => :post, :class => "btn btn-md btn-primary")%>
+                    <%= link_to("以微信付款", pay_with_wechat_order_path(@order.token), :method => :post, :class => "btn btn-md btn-primary")%>
+                </div>
+            <% else %>
+                <p class="text-center space-50">此订单已完成付款</p>
             <% end %>
         </div>
-        <% if !@order.is_paid?%>
-            <div class="group pull-right">
-                <%= link_to("以支付宝付款", pay_with_alipay_order_path(@order.token), :method => :post, :class => "btn btn-danger")%>
-                <%= link_to("以微信付款", pay_with_wechat_order_path(@order.token), :method => :post, :class => "btn btn-danger")%>
-            </div>
-        <% else %>
-            <p class="text-center">此订单已完成付款</p>
-        <% end %>
     </div>
 </div>
