order houtao show page done

--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,5 +1,5 @@
 <h2 style="text-align:center;" class="space-50">订单列表</h2>
-<table class="table commonlink">
+<table class="table ">
     <thead>
         <tr>
             <th>ID</th>
