--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,11 +1,11 @@
-<div class="row center space-50">
+<div class="row  space-50">
     <div class="col-md-12">
-        <h2>订单明细(<%= render_order_paid_state(@order)%>)</h2>
+        <h2 class="center">订单明细(<%= render_order_paid_state(@order)%>)</h2>
         <%= render "admin/orders/state_option",order: @order%>
         <table class="table">
             <thead>
                 <tr>
-                    <th>商品明细</th>
+                    <th>商品名称</th>
                     <th>单价</th>
                     <th>数量</th>
                 </tr>
@@ -28,20 +28,25 @@
         </table>
         <div class="total clearfix">
             <span class="pull-right">
-                总计<%= @order.total %> CNY
-      </span>
+                合计：¥ <%= @order.total %>
+            </span>
         </div>
-        <h2 class="center space-50">寄送资讯</h2>
+        <h2 class="center space-50">寄送信息</h2>
         <table class="table">
             <tbody>
                 <tr>
                     <td>
                         付款信息
-          </td>
+                    </td>
                 </tr>
                 <tr>
                     <td>
-                        <%= @order.billing_name %> - <%= @order.billing_phone %>
+                        <%= @order.billing_name %>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= @order.billing_phone %>
                     </td>
                 </tr>
                 <tr>
@@ -51,7 +56,17 @@
                 </tr>
                 <tr>
                     <td>
-                        <%= @order.shipping_name %> - <%= @order.shipping_address %>
+                        <%= @order.shipping_name %>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= @order.shipping_phone %>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= @order.shipping_address %>
                     </td>
                 </tr>
             </tbody>
