--- a/app/views/account/orders/index.html.erb
+++ b/app/views/account/orders/index.html.erb
@@ -1,18 +1,28 @@
-<h2>订单列表 </h2>
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>生成时间</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @orders.each do |order| %>
-            <tr>
-                <td> <%= link_to(order.id, order_path(order.token)) %> </td>
-                <td> <%= order.created_at.to_s(:long) %> </td>
-            </tr>
-        <% end %>
-    </tbody>
-</table>
-<%= will_paginate @orders , class: "apple_pagination"%>
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            <h3 class="center space-50"><i class='fa fa-credit-card'></i> 历史订单</h3>
+            <table class="table ">
+                <thead>
+                    <tr>
+                        <th>订单编号</th>
+                        <th>订单金额</th>
+                        <th>下单时间</th>
+                        <th>订单状态</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% @orders.each do |order| %>
+                        <tr>
+                            <td> <%= link_to(order.id, order_path(order.token)) %></td>
+                            <td><%= order.total %></td>
+                            <td><%= order.created_at.strftime("%Y-%m-%d - %H:%M") %></td>
+                            <td><%= render_order_status(order) %></td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+            <%= will_paginate @orders , class: "apple_pagination"%>
+        </div>
+    </div>
+</div>
