footer bugs fix

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -6,15 +6,15 @@
                     <div class="col-md-2 col-xs-4">
                         <h4 style="margin-bottom: 22px;">推荐产品</h4>
                         <ul class="list-unstyled">
-                            <li><%= link_to("AW", root_path )%></li>
-                            <li><%= link_to("CW", root_path )%></li>
-                            <li><%= link_to("SW", root_path )%></li>
+                            <li><%= link_to("网桥系列", root_path )%></li>
+                            <li><%= link_to("AP系列", root_path )%></li>
+                            <li><%= link_to("POE交换机", root_path )%></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-xs-4">
                         <h4 style="margin-bottom: 22px;">服务</h4>
                         <ul class="list-unstyled">
-                            <li><%= link_to("代理商查询", root_path )%></li>
+                            <!-- <li><%= link_to("代理商查询", root_path )%></li> -->
                             <li><%= link_to("技术支持", root_path )%></li>
                             <li><%= link_to("方案资讯", root_path )%></li>
                         </ul>
@@ -22,7 +22,7 @@
                     <div class="col-md-2 col-xs-4">
                         <h4 style="margin-bottom: 22px;">关于我们</h4>
                         <ul class="list-unstyled">
-                            <li><%= link_to("关于ccccc", root_path )%></li>
+                            <li><%= link_to("公司介绍", root_path )%></li>
                             <li><%= link_to("加入我们", root_path )%></li>
                         </ul>
                     </div>
@@ -40,16 +40,18 @@
                             <p style="font-size:30px;">
                                 4001-888-222
                             </p>
-                            <p style="font-size:14px;color:#666666;">微信公众号</p>
+                            <p style="font-size:14px;color:#666666;"><i class="fa fa-weixin" aria-hidden="true"></i> 微信公众号</p>
                         </ul>
                     </div>
                 </div>
-                <div class="row">
-                    <hr>
-                    <p  class="footer-copy">
-                        Copyright ©2017 Convolum 版权所有 保留一切权利 蜀B2-20170706 联系方式：1234567890
-                  </p>
-                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <hr style="border-top: 1px solid #e6e6e6;">
+                <p  class="footer-copy">
+                    Copyright ©2017 Convolum All Rights Reserved 蜀ICP备B2-20170706
+          </p>
             </div>
         </div>
     </div>
