--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
                     </div>
                 <% end %>
                 <hr />
-                <div class="account">
+                <div class="account index_more">
                     <%= link_to "已经是Convolum会员？点此登陆", new_session_path(resource_name)%><br />
                 </div>
             </div>
