--- a/app/views/plansintroduction/posts/index.html.erb
+++ b/app/views/plansintroduction/posts/index.html.erb
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="space-50">
-            <%= will_paginate @posts , class: "apple_pagination"%>
+            <hr style="border-top: 1px solid #e6e6e6;">
         </div>
     </div>
 </div>
