--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -228,9 +228,10 @@
   font-size: 12px;
 
   h4 {
-    font-size: 14px;
+    font-size: 16px;
     margin-top: 25px;
     margin-bottom: 15px;
+    font-weight: bold;
   }
 
   li {
