--- a/app/assets/stylesheets/bootstrap.scss
+++ b/app/assets/stylesheets/bootstrap.scss
@@ -13,7 +13,7 @@
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
-  font-family: sans-serif;
+  font-family:"Microsoft YaHei",sans-serif,"宋体";
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
