--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,7 +12,7 @@
                     </div>
                 <% end %>
                 <hr />
-                <div class="account">
+                <div class="account index_more">
                     <%= link_to "已经是Convolum会员？点此登陆", new_session_path(resource_name) %><br/>
                     <br/>
                     <%= link_to "现在就加入Convolum", new_registration_path(resource_name) %>
