--- a/app/assets/stylesheets/bootstrap.scss
+++ b/app/assets/stylesheets/bootstrap.scss
@@ -13,7 +13,7 @@
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
-  font-family:"Microsoft YaHei",sans-serif,"宋体";
+  font-family:sans-serif,"Microsoft YaHei", "微软雅黑","宋体";
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -1086,7 +1086,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family:"Lato", "Helvetica Neue", Helvetica, Arial, sans-serif,"Microsoft YaHei", "微软雅黑";
   font-size: 15px;
   line-height: 1.42857143;
   color: #2c3e50;
