--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,7 +6,7 @@
   margin-left: 42px;
   padding-top: 47.5px;
   padding-bottom: 0px;
-  font-size: 2.5em;
+  font-size: 20px;
   font-weight: normal;
 }
 
@@ -16,7 +16,7 @@
   margin-left: 42px;
   margin-right: 42px;
   margin-bottom: 40px;
-  font-size: 1.1em;
+  font-size: 14px;
   line-height: 1.8em;                   //拉开行高
   text-align: justify;                  //文本两端对齐
   img {
