--- a/app/views/common/_post.html.erb
+++ b/app/views/common/_post.html.erb
@@ -1,10 +1,10 @@
-<div class="row space-50">
+<div class="row space-30">
     <div class="col-md-8 col-md-offset-2">
         <div class="col-md-12 show-post">
             <div class="post-title-show">
                 <%= @post.title %>
             </div>
-            <hr style="margin: 8px 42px 18px 42px;">
+            <hr style="margin: 8px 42px 18px 42px; border-top: 1.5px solid #e6e6e6;">
             <div class="post-description">
                 <%= raw @post.description %>
             </div>
