--- a/app/views/common/_welcome_navbar.html.erb
+++ b/app/views/common/_welcome_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand " href="/" style="padding-left:120px;"> Convolum </a>
+            <a class="navbar-brand logo" href="/" style="padding-left:120px;"> Convolum <span><img src="https://ww1.sinaimg.cn/large/006tNbRwly1fh90hz30clj3036030dfp.jpg" alt="logo" style="top:0px;left:101px;"></span></a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
