--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -33,7 +33,7 @@
                             <li><%= link_to("采购相关", root_path )%></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 col-xs-12" style="text-align:right">
+                    <div class="col-md-3 col-xs-12" style="text-align:right">
                         <ul class="list-unstyled">
                             <br>
                             <p>在线服务热线</p>
@@ -42,6 +42,11 @@
                             </p>
                             <p style="font-size:14px;color:#666666;"><i class="fa fa-weixin" aria-hidden="true"></i> 微信公众号</p>
                         </ul>
+                    </div>
+                    <div class="col-md-1">
+                        <div style="width:100px;padding-top:16px;">
+                            <img src="https://ww3.sinaimg.cn/large/006tKfTcly1ficfnou72tj30690690sq.jpg" alt="" class="img-responsive">
+                        </div>
                     </div>
                 </div>
             </div>
