--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -44,7 +44,7 @@
                         </ul>
                     </div>
                     <div class="col-md-1">
-                        <div style="width:100px;padding-top:16px;">
+                        <div style="width:200%;padding-top:16px;">
                             <img src="https://ww3.sinaimg.cn/large/006tKfTcly1ficfnou72tj30690690sq.jpg" alt="" class="img-responsive">
                         </div>
                     </div>
