footer zsy done

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,50 +1,50 @@
-<footer class="footer" style="padding-top:40px;">
+<footer class="footer" style="padding-top:2.8%;">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2" >
-                <div class="row" style="margin-bottom:20px;text-align:left;">
-                    <div class="col-md-2 col-xs-4">
-                        <h4 style="margin-bottom: 22px;">推荐产品</h4>
+            <div class="col-md-8 col-md-offset-2 col-xs-12 " >
+                <div class="row footer-layout" style="margin-bottom:2.1%;" >
+                    <div class="col-md-2 col-xs-3">
+                        <h4>推荐产品</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("网桥系列", root_path )%></li>
                             <li><%= link_to("AP系列", root_path )%></li>
                             <li><%= link_to("POE交换机", root_path )%></li>
                         </ul>
                     </div>
-                    <div class="col-md-2 col-xs-4">
-                        <h4 style="margin-bottom: 22px;">服务</h4>
+                    <div class="col-md-2 col-xs-3">
+                        <h4>服务</h4>
                         <ul class="list-unstyled">
                             <!-- <li><%= link_to("代理商查询", root_path )%></li> -->
                             <li><%= link_to("技术支持", root_path )%></li>
                             <li><%= link_to("方案资讯", root_path )%></li>
                         </ul>
                     </div>
-                    <div class="col-md-2 col-xs-4">
-                        <h4 style="margin-bottom: 22px;">关于我们</h4>
+                    <div class="col-md-2 col-xs-3">
+                        <h4>关于我们</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("公司介绍", root_path )%></li>
                             <li><%= link_to("加入我们", root_path )%></li>
                         </ul>
                     </div>
-                    <div class="col-md-2 col-xs-4">
-                        <h4 style="margin-bottom: 22px;"> 商务合作</h4>
+                    <div class="col-md-2 col-xs-3">
+                        <h4> 商务合作</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("开放招商", root_path )%></li>
                             <li><%= link_to("采购相关", root_path )%></li>
                         </ul>
                     </div>
-                    <div class="col-md-3 col-xs-12" style="text-align:right">
+                    <div class="col-md-3  col-xs-4" style="text-align:right">
                         <ul class="list-unstyled">
                             <br>
                             <p>在线服务热线</p>
-                            <p style="font-size:30px;">
+                            <p class="hotline">
                                 4001-888-222
                             </p>
-                            <p style="font-size:14px;color:#666666;"><i class="fa fa-weixin" aria-hidden="true"></i> 微信公众号</p>
+                            <p style="color:#666666;" class="wechat"><i class="fa fa-weixin" aria-hidden="true"></i> 微信公众号</p>
                         </ul>
                     </div>
-                    <div class="col-md-1">
-                        <div style="width:200%;padding-top:16px;">
+                    <div class="col-md-1  col-xs-5">
+                        <div class="zsy-footer-qrcode" >
                             <img src="https://ww3.sinaimg.cn/large/006tKfTcly1ficfnou72tj30690690sq.jpg" alt="" class="img-responsive">
                         </div>
                     </div>
