--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,7 +9,7 @@
         <link rel="shortcut icon" href="/favicon.ico">
     </head>
     <body style="background-color: #fff;">
-        <div class="container-fluid" style="min-height:550px;">
+        <div class="container-fluid" >
             <div class="row" style="margin-bottom:60px;">
                 <%= render "common/navbar" %>
             </div>
