--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -221,21 +221,21 @@
 
 .footer{
   text-align: center;
-  min-height: 200px;
+
   background-color: #f5f5f2;
-  padding: 15px 0;
+  padding: 1.1% 0;
   color: #333333;
-  font-size: 12px;
+
 
   h4 {
-    font-size: 16px;
-    margin-top: 25px;
-    margin-bottom: 15px;
+
+    margin-top: 19.5%;
+    margin-bottom: 17.2%;
     font-weight: bold;
   }
 
   li {
-    margin-top: 5px;
+    margin-top: 7.8%;
   }
 
   a {
@@ -260,35 +260,15 @@
     }
   }
 
-  .footer-box {
-    text-align: left !important;
-    margin-top: 15px;
-  }
+
 
   .footer-copy {
-    margin-top:28.5px;
-    margin-bottom:60px;
+    margin-top:2.4%;
+    margin-bottom:5.1%;
     font-size: 12px;
     color: #666666;
   }
-  .footer-content {
-    font-size: 16px;
-    font-family: Raleway;
-    color: #ddd;
-    letter-spacing: 1px;
-    margin-top: 10px;
-    font-weight: 200;
 
-    img {
-      width: 25px;
-      margin-left: 7.5px;
-      margin-right: -0.1px;
-    }
-
-    img:hover {
-      opacity: 1;
-    }
-  }
 }
 
 .width-100 {
@@ -522,3 +502,114 @@ table{
 .width-50 {
     width: 50%;
   }
+
+
+  //zsy
+  .width-25 {
+    width: 25%;
+  }
+
+  .width-50 {
+    width: 50%;
+  }
+
+  .width-75 {
+    width: 75%;
+  }
+
+  .width-100 {
+    width: 100%;
+  }
+
+  .height-200 {
+    height: 200px;
+  }
+
+
+
+  @media (min-width: 320px) {
+    .zsy-footer-qrcode {
+      width:70%;
+      padding-top:16px;
+
+    }
+
+    h4{
+      font-size: 12px;
+    }
+    .footer {
+      font-size: 8px;
+      hr {
+        margin: 1.8% 0 ;
+      }
+    }
+
+    .hotline {
+      font-size:14px;
+    }
+
+    .wechat {
+      font-size:10px;
+    }
+
+    .footer-layout {
+      text-align: center;
+    }
+  }
+
+@media (min-width: 768px) {
+  .zsy-footer-qrcode {
+    width:30%;
+    padding-top:16px;
+
+  }
+
+  h4{
+    font-size: 14px;
+  }
+
+  .footer {
+    font-size: 10px;
+    hr {
+      margin: 1.8% 0 ;
+    }
+  }
+  .hotline {
+    font-size:30px;
+  }
+
+  .wechat {
+    font-size:12px;
+  }
+  .footer-layout {
+    text-align: center;
+  }
+
+}
+@media (min-width: 992px) {
+  .zsy-footer-qrcode {
+    width:200%;
+    padding-top:16px;
+
+  }
+  h4{
+    font-size: 16px;
+  }
+  .footer {
+    font-size: 12px;
+    hr {
+      margin: 1.8% 0 ;
+    }
+  }
+  .hotline {
+    font-size:30px;
+  }
+
+  .wechat {
+    font-size:14px;
+  }
+
+  .footer-layout {
+    text-align: left;
+  }
+}
