footer zsy qrcode fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -504,7 +504,7 @@ table{
   }
 
 
-  //zsy
+  //zsy-footer
   .width-25 {
     width: 25%;
   }
@@ -529,7 +529,7 @@ table{
 
   @media (min-width: 320px) {
     .zsy-footer-qrcode {
-      width:70%;
+      width:60%;
       padding-top:16px;
 
     }
@@ -613,3 +613,6 @@ table{
     text-align: left;
   }
 }
+
+
+//zsy-navbar
