--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,9 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand logo" href="/" style="padding-left:120px;"> Convolum <span><img src="https://ww1.sinaimg.cn/large/006tNbRwly1fh90hz30clj3036030dfp.jpg" alt="logo" style="top:0px;left:101px;"></span></a>
+            <a class="navbar-brand logo zsy-brand" href="/" > Convolum
+              <span><img src="https://ww1.sinaimg.cn/large/006tNbRwly1fh90hz30clj3036030dfp.jpg" alt="logo" style="top:0px;left:101px;"></span>
+            </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -13,21 +15,18 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse navbar-ex1-collapse collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li style="padding-left:45px;"><%= link_to("首页", root_path )%></li>
-                <li style="padding-left:45px;"><%= link_to("产品", warehouse_products_path )%></li>
-                <li style="padding-left:45px;"><%= link_to("方案", plansintroduction_posts_path )%></li>
-                <li style="padding-left:45px;"><%= link_to("商城", products_path )%></li>
-                <li style="padding-left:45px;"><%= link_to("无线知识", wirelessinfo_posts_path )%></li>
-                <li style="padding-left:20px;"><%= link_to("网络知识", netinfo_posts_path )%></li>
-                <li style="padding-left:20px;"><%= link_to("云管理", contactus_posts_path )%></li>
+                <li class="zsy-li" ><%= link_to("首页", root_path )%></li>
+                <li class="zsy-li" ><%= link_to("产品", warehouse_products_path )%></li>
+                <li class="zsy-li" ><%= link_to("方案", plansintroduction_posts_path )%></li>
+                <li class="zsy-li" ><%= link_to("商城", products_path )%></li>
+                <li class="zsy-li" ><%= link_to("无线知识", wirelessinfo_posts_path )%></li>
+                <li class="zsy-li" ><%= link_to("网络知识", netinfo_posts_path )%></li>
+                <li class="zsy-li" ><%= link_to("云管理", contactus_posts_path )%></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right" style="padding-right:200px;">
+            <ul class="nav navbar-nav navbar-right zsy-account" >
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
                         <i class="fa fa-user-o" aria-hidden="true" >
-                            <% if current_user %>
-                                <%= current_user.email %>
-                            <% end %>
                         </i>
                         <b class="caret"></b>
                     </a>
@@ -35,6 +34,14 @@
                         <% if !current_user %>
                             <li><%= link_to(content_tag(:i, '注册', class: 'fa fa-user-plus'), new_user_registration_path)%></li>
                             <li><%= link_to(content_tag(:i, '登入', class: 'fa fa-sign-in'), new_user_session_path) %></li>
+                        <% end %>
+                        <% if current_user %>
+                            <li>
+                                <%= link_to "#" do %>
+                                    <i class="fa fa-user" aria-hidden="true"></i> <%= current_user.email %>
+                                <% end %>
+                                <li class="divider"> </li>
+                            </li>
                         <% end %>
                         <% if current_user %>
                             <% if current_user.admin? %>
