--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -24,17 +24,17 @@
                         <h4 class="footer-column">关于我们</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("公司介绍", Post.find(4) )%></li>
-                            <li><%= link_to("加入我们", Post.find(5) )%></li>
+                            <li style="margin-bottom:46px"><%= link_to("加入我们", Post.find(5) )%></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-xs-3">
                         <h4 class="footer-column"> 商务合作</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("开放招商", Post.find(6) )%></li>
-                            <li><%= link_to("采购相关", Post.find(7) )%></li>
+                            <li style="margin-bottom:46px"><%= link_to("采购相关", Post.find(7) )%></li>
                         </ul>
                     </div>
-                    <div class="col-md-3  col-xs-4" style="text-align:right">
+                    <div class="col-md-3  col-xs-6" style="text-align:right">
                         <ul class="list-unstyled">
                             <br>
                             <p>在线服务热线</p>
@@ -44,7 +44,7 @@
                             <p style="color:#666666;" class="wechat"><i class="fa fa-weixin" aria-hidden="true"></i> 微信公众号</p>
                         </ul>
                     </div>
-                    <div class="col-md-1  col-xs-5">
+                    <div class="col-md-1  col-xs-6">
                         <div class="zsy-footer-qrcode" >
                             <img src="https://ww3.sinaimg.cn/large/006tKfTcly1ficfnou72tj30690690sq.jpg" alt="" class="img-responsive">
                         </div>
