warehouse index 3ad & 1hr zsy done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -650,3 +650,22 @@ table{
     padding-right: 130px;
   }
 }
+
+//zsy warehouse index
+@media (min-width: 320px) {
+  .header {
+    font-size: 26px;
+    }
+}
+
+@media (min-width: 768px) {
+  .header {
+    font-size: 30px;
+    }
+}
+
+@media (min-width: 992px) {
+  .header {
+    font-size: 30px;
+    }
+}
