--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -1,12 +1,12 @@
 <!-- 主推产品广告 -->
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
         <div class="container-fluid">
             <div class="row">
                 <div class="pwd space-30">
                     <p class="left-15">首页／产品</p>
                 </div>
-                <div class="col-md-8 space-20">
+                <div class="col-md-8  col-sm-8  col-xs-12 space-20">
                     <div class="cpad">
                         <%= link_to @intro5.link, target: "_blank" do %>
                             <% if @intro5.image.present? %>
@@ -16,7 +16,7 @@
                             <% end %>
                         <% end %>
                     </div>
-                    <div class="cpad" style="margin-top:10px;">
+                    <div class="cpad" style="margin-top:1.64%;">
                         <%= link_to @intro6.link, target: "_blank" do %>
                             <% if @intro6.image.present? %>
                                 <%= image_tag(@intro6.image.ad3, :class => "width-100") %>
@@ -26,8 +26,8 @@
                         <% end %>
                     </div>
                 </div>
-                <div class="col-md-4" style="padding-left:6px;">
-                    <div class="cpad-v space-20">
+                <div class="col-md-4 col-sm-4 col-xs-12  space-20" style="padding-left:6px;">
+                    <div class="cpad-v ">
                         <%= link_to @intro7.link, target: "_blank" do %>
                             <% if @intro7.image.present? %>
                                 <%= image_tag(@intro7.image.ad4, :class => "width-100") %>
@@ -43,16 +43,16 @@
 </div>
 <!-- 产品系列 -->
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
         <div class="container-fluid">
             <div class="row space-50">
-                <div class="col-md-4" style="padding-right:0px;width:340px;">
+                <div class="col-md-4 col-sm-4 col-xs-4" style="padding-right:0px;width:33.2%;">
                     <hr class="header-hr">
                 </div>
-                <div class="col-md-4" style="padding-right:0px;padding-left:0px;width:260px;">
+                <div class="col-md-4 col-sm-4 col-xs-4" style="padding-right:0px;padding-left:0px;width:33.6%;">
                     <h2 class="header">Convolum 系列</h2>
                 </div>
-                <div class="col-md-4" style="padding-left:0px;width:340px;">
+                <div class="col-md-4 col-sm-4 col-xs-4" style="padding-left:0px;width:33.2%;">
                     <hr class="header-hr">
                 </div>
             </div>
