--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="row" style="margin-top:6px;">
-        <div class="col-md-4 col-xs-4" style="padding: 0px 2px;">
+        <div class="col-md-4 col-sm-4  col-xs-12" style="padding: 0px 2px;">
             <%= link_to @intro2.link, target: "_blank" do %>
                 <% if @intro2.image.present? %>
                     <%= image_tag(@intro2.image.ad2, :class => "width-100") %>
@@ -20,7 +20,7 @@
                 <% end %>
             <% end %>
         </div>
-        <div class="col-md-4 col-xs-4" style="padding: 0px 2px;">
+        <div class="col-md-4 col-sm-4  col-xs-12" style="padding: 0px 2px;">
             <%= link_to @intro3.link, target: "_blank" do %>
                 <% if @intro3.image.present? %>
                     <%= image_tag(@intro3.image.ad2, :class => "width-100") %>
@@ -29,7 +29,7 @@
                 <% end %>
             <% end %>
         </div>
-        <div class="col-md-4 col-xs-4" style="padding: 0px 2px;">
+        <div class="col-md-4 col-sm-4 col-xs-12" style="padding: 0px 2px;">
             <%= link_to @intro4.link, target: "_blank" do %>
                 <% if @intro4.image.present? %>
                     <%= image_tag(@intro4.image.ad2, :class => "width-100") %>
