--- a/app/views/plansintroduction/posts/index.html.erb
+++ b/app/views/plansintroduction/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
         <div class="container-fluid">
             <div class="row">
                 <div class="pwd space-30">
@@ -7,7 +7,7 @@
                 </div>
                 <div class="row">
                     <% @posts.each do |post| %>
-                        <div class="col-xs-6 col-md-6 text-center" style="width:463px;">
+                        <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-6 col-md-offset-0 text-center" style="width:463px;">
                             <div style="margin-top:35px;">
                             </div>
                             <!-- 文章标题  宣传语-->
@@ -36,7 +36,7 @@
                             <!-- 文章封面 -->
                             <%= link_to plansintroduction_post_path(post) do  %>
                                 <% if post.postpic.present? %>
-                                    <%= image_tag(post.postpic.url , class: "post-pic") %>
+                                    <%= image_tag(post.postpic.url , class: "post-pic ") %>
                                 <% else %>
                                     <%= image_tag("https://ww4.sinaimg.cn/large/006tNc79ly1fha95j607vj30by04qq32.jpg", class: "post-pic") %>
                                 <% end %>
