--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -62,9 +62,9 @@
             <div class="row space-20">
                 <h3 class="cp-title left-15">AW系列 <span class="cp-title-2 left-15">性能设计 科技外观</span></h3>
             </div>
-            <div class="row">
+            <div class="row" >
                 <% @productsaw.each do |product| %>
-                    <div class=" col-xs-6 col-sm-3 col-md-3 text-center" style="width:240px;">
+                    <div class=" col-xs-8 col-xs-offset-2 col-sm-3 col-sm-offset-0 col-md-3 text-center" style="width:240px;">
                         <div class="space-20">
                         </div>
                         <%= link_to product_path(product) do  %>
@@ -87,7 +87,7 @@
             </div>
             <div class="row" >
                 <% @productscw.each do |product| %>
-                    <div class="col-xs-6 col-md-3 text-center" style="width:240px;">
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-3 col-sm-offset-0 col-md-3 text-center" style="width:240px;">
                         <div class="space-20">
                         </div>
                         <%= link_to product_path(product) do  %>
@@ -110,7 +110,7 @@
             </div>
             <div class="row">
                 <% @productssw.each do |product| %>
-                    <div class="col-xs-6 col-md-3 text-center" style="width:240px;">
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-3 col-sm-offset-0 col-md-3 text-center" style="width:240px;">
                         <div class="space-20">
                         </div>
                         <%= link_to product_path(product) do  %>
